--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,7 +31,6 @@ section#telefone {
 
     height: 627px;
     width: 311px;
-    background-color: blue;
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
 
@@ -39,7 +38,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
@@ -57,7 +56,9 @@ section#redes-sociais img {
 
 section#redes-sociais img:hover {
     border: 2px solid rgba(255, 255, 255, 0.637);
-    transform: translate(-10px, -3px);
+    transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
     transition: transform .5s;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform .3s border 1s;
 }
