--- a/estilos/social.css
+++ b/estilos/social.css
@@ -6,7 +6,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
 
 img {
     width: 100vw;
@@ -20,4 +23,8 @@ a {
     text-align: center;
     font-weight: bolder;
     text-decoration: none;
+}
+
+a:hover {
+    background-color: red;
 }
