--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,13 +6,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 html, body {
     height: 100vh;
     width: 100vw;
     background-color: black;
 }
 
-body {
+body {   
     background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
