--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,9 +46,7 @@ body {
     gap: 32px;
 }
 .conteudo-principal-escrito-titulo {
-    height: 48px;
-    display: block;
-    margin: 0 auto;
+    text-align: center;
     margin-top: 15px;
     font-family:'Catamaran', sans-serif;
     font-weight: 400;
