--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,26 +40,25 @@ body {
     align-items: center;
     justify-content: space-around;
 }
-
+.conteudo-principal-escrito {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
 .conteudo-principal-escrito-titulo {
-    margin-top: 15px;
+    margin-top: 20px;
     font-family:'Catamaran', sans-serif;
     font-weight: 400;
     font-size: 64px;
     color: #FEFEFE;
 }
 .conteudo-principal-escrito-subtitulo {
-    margin-bottom: 20px;
-    text-align: center;
     font-family:'Sarala', sans-serif;
     font-weight: 400;
     font-size: 18px;
     color: #FEFEFE;
 }
 .conteudo-principal-escrito-botao {
-    height: 48px;
-    display: block;
-    margin: 0 auto;
     background-color: #FEFEFE;
     width: 180px;
     height: 60px;
@@ -69,6 +68,11 @@ body {
     font-family:'Sarala', sans-serif;
     font-weight: 400;
     font-size: 24px;
+    color: #FEFEFE;
+}
+.conteudo-principal-imagem {
+    height: 100px;
+    border-radius: 50% 50%;
 }
 .conteudo-principal-escrito-botao:hover {
     background-color: rgba(243, 240, 240, 0.897);
