--- a/estilos/social.css
+++ b/estilos/social.css
@@ -1,30 +1,118 @@
 @charset "UTF-8";
 
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?família=Montserrat+Suplentes:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?família=Anton&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
+html,body {
+    height: 100%;
 }
 
-img {
-    width: 100vw;
+.parent {
+    display: flex;
+}
+.sidebar {
+    width: 20%;
+    height: 100%;
+    position: fixed;
+    background-color: #660099;
 }
 
-a {
-    display: block;
-    background-color: darkred;
-    color: white;
-    padding: 20px;
+.sidebar-pos {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.img-sidebar {
     text-align: center;
-    font-weight: bolder;
+}
+
+.img-sidebar img {
+    width: 70%;
+    border: 8px solid #801fb1;
+    border-radius: 50%;
+}
+
+.menu {
+    margin: 20px 0;
+    text-align: center;
+}
+
+.menu a {
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 16px;
+    display: block;
+    margin-bottom: 20px;
     text-decoration: none;
 }
+.menu a.selected:hover {
+    color: lightgray;
+}
 
-a:hover {
-    background-color: red;
+.content {
+    position: absolute;
+    left: 20%;
+    width: 80%;
+    height: 100%;
+    overflow-y: auto;
+    padding: 0 3%;
+    background-color:#F7F7F7 ;
+}
+
+section.descricao {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+section.descricao h2 {
+    font-family: 'Anton', sans-serif;
+    color: #660099;
+    font-size: 46px;
+}
+section.descricao h2 > span {
+    color: black;
+}
+
+section.descricao h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 15px 0;
+    color: #170000;
+    font-size: 18px;
+}
+
+section.descricao p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #170000;
+    font-size: 18px;
+    margin-top: 40px;
+}
+
+.icons-social {
+    margin-top: 20px;
+}
+
+.icons-social a {
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: black;
+    margin: 0 10px;  
+    text-align: center;
+}
+.icons-social a:hover {
+    color: #660099;
+}
+
+.icons-social img {
+    width: 30px;
+    height: 30px;
+    border-radius: 20%;
 }
