--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,118 +1,65 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?família=Montserrat+Suplentes:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?família=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap');
 
-*{
+body{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: 'Bungee Outline', cursive;
+    background-color: black;
 }
 
-html,body {
-    height: 100%;
-}
-
-.parent {
+.body-content{
     display: flex;
 }
-.sidebar {
-    width: 20%;
-    height: 100%;
-    position: fixed;
-    background-color: #660099;
+
+.body-content .b-title{
+    margin-left: 10%;
 }
 
-.sidebar-pos {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+.body-content .b-title h1{
+    color: blue;
+    font-size: 50px;
+    margin-top: 100px;
 }
 
-.img-sidebar {
-    text-align: center;
-}
-
-.img-sidebar img {
-    width: 70%;
-    border: 8px solid #801fb1;
-    border-radius: 50%;
-}
-
-.menu {
-    margin: 20px 0;
-    text-align: center;
-}
-
-.menu a {
+.body-content .b-title p {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
     color: white;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-size: 16px;
-    display: block;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
-.menu a.selected:hover {
-    color: lightgray;
 }
 
-.content {
-    position: absolute;
-    left: 20%;
-    width: 80%;
-    height: 100%;
-    overflow-y: auto;
-    padding: 0 3%;
-    background-color:#F7F7F7 ;
-}
-
-section.descricao {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-section.descricao h2 {
-    font-family: 'Anton', sans-serif;
-    color: #660099;
-    font-size: 46px;
-}
-section.descricao h2 > span {
-    color: black;
-}
-
-section.descricao h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 15px 0;
-    color: #170000;
-    font-size: 18px;
-}
-
-section.descricao p {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #170000;
-    font-size: 18px;
-    margin-top: 40px;
-}
-
-.icons-social {
-    margin-top: 20px;
-}
-
-.icons-social a {
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    color: black;
-    margin: 0 10px;  
-    text-align: center;
-}
-.icons-social a:hover {
+.body-content .b-title span{
     color: #660099;
 }
 
-.icons-social img {
-    width: 30px;
-    height: 30px;
-    border-radius: 20%;
+.body-content .b-title button{
+    border: none;
+    width: 100px;
+    height: 50px;
+    background: blue;
+    border-radius: 60px;
+    outline: none;
+    color: white;
+}
+
+.body-content .b-title .icons{
+
+    display: flex;
+    margin-top: 80px;
+}
+
+.body-content .b-title .icons img{
+    width: 25px;
+    height: 25px;
+    padding: 10px;
+}
+
+.body-content .b-img{
+    margin-left: 15%;
+}
+
+.body-content .b-img img{
+    width: 480px;
+    height: 480px;
 }
