--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,65 +1,90 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Outline&display=swap');
+@import url('https://fonts.googleapis.com/css2?família=Baloo+2&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
-body{
+* {
+    box-sizing: border-box;
+    font-family: 'Baloo 2', cursive;
+}
+body {
     margin: 0;
-    padding: 0;
-    font-family: 'Bungee Outline', cursive;
-    background-color: black;
+    background: #4f4f77;
 }
-
-.body-content{
+.wrapper, .container, .content {
     display: flex;
 }
-
-.body-content .b-title{
-    margin-left: 10%;
+.wrapper {
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
-
-.body-content .b-title h1{
-    color: blue;
-    font-size: 50px;
-    margin-top: 100px;
+.content {
+    position: relative;
+    padding: 0.5rem;
+    margin: 0 1rem;
+    cursor: pointer;
+    border-radius: 1rem;
+    background: #E3E2FD;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
 }
-
-.body-content .b-title p {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 18px;
-    color: white;
+i {
+    padding: 3px;
+    color: #000;
+    font-size: 1.6rem
 }
-
-.body-content .b-title span{
-    color: #660099;
+.toolip {
+    opacity: 0;
+    position: absolute;
+    padding: 0.5rem 1rem;
+    background: #000;
+    color: #E3E2FD;
+    font-size: 1rem;
+    white-space: nowrap;
+    font-weight: 700;
+    border-radius: 0.5rem;
+    pointer-events: none;
 }
-
-.body-content .b-title button{
-    border: none;
-    width: 100px;
-    height: 50px;
-    background: blue;
-    border-radius: 60px;
-    outline: none;
-    color: white;
+.toolip:after {
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background: #000;
+    border-radius: 3px;
 }
-
-.body-content .b-title .icons{
-
-    display: flex;
-    margin-top: 80px;
+.content, .toolip, i {
+    transition: .3s;
 }
-
-.body-content .b-title .icons img{
-    width: 25px;
-    height: 25px;
+.content:hover {
+    background: #000;
+}
+.content:hover i {
+    color: #E3E2FD;
+}
+.toolip {
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 100%);
+}
+.toolip:after {
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    top: 1px;
+}
+.content:hover .toolip {
+    opacity: 1;
+    bottom: -1rem;
+}
+header > h1 {
     padding: 10px;
+    text-align: center;
+    font-family: 'Audiowide', cursive;
+    font-size: 30px;
+    color: white;
 }
-
-.body-content .b-img{
-    margin-left: 15%;
-}
-
-.body-content .b-img img{
-    width: 480px;
-    height: 480px;
+header > p {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
