--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,7 +9,7 @@
 }
 body {
     margin: 0;
-    background: #4f4f77;
+    background-image: linear-gradient(to top, #660099, #111111);
 }
 .wrapper, .container, .content {
     display: flex;
@@ -31,7 +31,7 @@ body {
 i {
     padding: 3px;
     color: #000;
-    font-size: 1.6rem
+    font-size: 1.6rem;
 }
 .toolip {
     opacity: 0;
