--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,18 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.comcss2?family=Baloo+2&disolay=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Tangerine&display=swap');
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Bloo 2', cursive;
 }
 body {
-    margin: 0;
-    background: #0F1317;
+    
+    background-image: url('../imagens/kellen-riggin-TzNFf-RYW94-unsplash.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 .wrapper,
 .container,
@@ -86,4 +91,8 @@ header#cabecalho h1 {
     font-size: 20px;
     font-family: 'Audiowide', cursive;
     color: #001C76;
+}
+header#cabecalho p {
+    font-size: 10px;
+    font-family: 'Tangerine', cursive;
 }
